fixed styles overlapping

--- a/client/styles/button.css
+++ b/client/styles/button.css
@@ -1,5 +1,4 @@
 .button {
-  all: unset;
   font-size: 1rem;
   font-weight: 500;
   border-bottom: 5px;
